Верстка главной страницы, а так же навигации

--- a/src/app/components/bottom-header/bottom-header.component.html
+++ b/src/app/components/bottom-header/bottom-header.component.html
@@ -1,1 +1,30 @@
-<p>bottom-header works!</p>
+<div class="container">
+	<nav class="header__nav">
+		<ul class="nav__list">
+			<li class="nav__item">
+				<a routerLink="" class="nav__link"
+					><img src="../../../assets/images/nav-1.svg" alt="Иконка Главная" />
+					<p>Главная</p></a
+				>
+			</li>
+			<li class="nav__item">
+				<a routerLink="catalog" class="nav__link"
+					><img src="./../../assets/images/nav-2.svg" alt="Иконка Каталог" />
+					<p>Каталог</p></a
+				>
+			</li>
+			<li class="nav__item">
+				<a routerLink="wardrobe" class="nav__link"
+					><img src="./../../assets/images/nav-3.svg" alt="Иконка Гардероб" />
+					<p>Гардероб</p></a
+				>
+			</li>
+			<li class="nav__item">
+				<a routerLink="profile" class="nav__link"
+					><img src="./../../assets/images/nav-4.svg" alt="Иконка Кабинет" />
+					<p>Кабинет</p></a
+				>
+			</li>
+		</ul>
+	</nav>
+</div>
