--- a/src/app/components/downloader-buttons/downloader-buttons.component.html
+++ b/src/app/components/downloader-buttons/downloader-buttons.component.html
@@ -1,1 +1,4 @@
-<p>downloader-buttons works!</p>
+<div class="buttons">
+	<button>Загрузить свое фото</button>
+	<button>Добавить одежду</button>
+</div>
