--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <router-outlet></router-outlet>
-<app-bottom-header></app-bottom-header>
+<app-bottom-header *ngIf="showBottomHeader"></app-bottom-header>
