--- a/src/app/components/downloader-buttons/downloader-buttons.component.html
+++ b/src/app/components/downloader-buttons/downloader-buttons.component.html
@@ -1,4 +1,6 @@
 <div class="buttons">
-	<button>Загрузить свое фото</button>
+	<button routerLink="gallery" (click)="handleCameraButton()">
+		Загрузить свое фото
+	</button>
 	<button>Добавить одежду</button>
 </div>
