подключить камеру, часть вторая

--- a/src/app/components/downloader-buttons/downloader-buttons.component.html
+++ b/src/app/components/downloader-buttons/downloader-buttons.component.html
@@ -1,6 +1,4 @@
 <div class="buttons">
-	<button routerLink="gallery" (click)="handleCameraButton()">
-		Загрузить свое фото
-	</button>
+	<button routerLink="gallery">Загрузить свое фото</button>
 	<button>Добавить одежду</button>
 </div>
