--- a/src/app/pages/gallery/gallery.component.html
+++ b/src/app/pages/gallery/gallery.component.html
@@ -1,4 +1,6 @@
 <div class="video__container">
 	<video #videoElement autoplay></video> <canvas #canvasElement></canvas>
-	<div class="buttons"><button routerLink="">Загрузить</button></div>
+	<div class="buttons">
+		<button routerLink="" (click)="takeAPhoto()">Загрузить</button>
+	</div>
 </div>
