--- a/src/app/pages/confirmation/confirmation.component.scss
+++ b/src/app/pages/confirmation/confirmation.component.scss
@@ -1,19 +1,4 @@
-video{
-    position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
-    z-index: 1;
-}
-
-canvas{
-    display: none
-}
-
-.video__container{
+.confirmation__container{
     position: relative;
     width: 100vw;
     height: 100vh;
@@ -22,9 +7,20 @@ canvas{
 
 .back-button{
     position: fixed;
-    top: 20px;
-    left: 20px;
+    top: 42px;
+    left: 42px;
     z-index: 3;
+}
+
+img {
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);
+    min-width: 100%;
+    min-height: 100%;
+    object-fit: cover;
+    z-index: 1;
 }
 
 .buttons{
@@ -46,7 +42,7 @@ button{
     position: relative;
     padding: 16px 15px;
     display: inline-block;
-    width: 45%;
+    width: 100%;
     height: 50px;
     background-color: #B200FF;
     color: white;
