--- a/src/app/components/downloader-buttons/downloader-buttons.component.html
+++ b/src/app/components/downloader-buttons/downloader-buttons.component.html
@@ -1,4 +1,6 @@
-<div class="buttons">
-	<button routerLink="gallery">Загрузить свое фото</button>
-	<button>Добавить одежду</button>
+<div class="buttons__container">
+	<div class="buttons">
+		<button routerLink="gallery">Загрузить свое фото</button>
+		<button>Добавить одежду</button>
+	</div>
 </div>
