--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,1 +1,4 @@
+<div class="main__container" *ngIf="imageData">
+	<img class="image-data" [src]="imageData" alt="Captured Photo" />
+</div>
 <app-downloader-buttons></app-downloader-buttons>
