--- a/src/app/components/bottom-header/bottom-header.component.html
+++ b/src/app/components/bottom-header/bottom-header.component.html
@@ -22,7 +22,7 @@
 			<li class="nav__item">
 				<a routerLink="profile" class="nav__link"
 					><img src="./../../assets/images/nav-4.svg" alt="Иконка Кабинет" />
-					<p>Кабинет</p></a
+					<p>Профиль</p></a
 				>
 			</li>
 		</ul>
