--- a/src/app/pages/confirmation/confirmation.component.scss
+++ b/src/app/pages/confirmation/confirmation.component.scss
@@ -1,26 +1,28 @@
 .confirmation__container{
     position: relative;
-    width: 100vw;
+    width: 100%;
     height: 100vh;
     overflow: hidden;
+    display: flex;
+    flex-direction: column;
 }
 
 .back-button{
     position: fixed;
-    top: 42px;
-    left: 42px;
+    top: 20px;
+    left: 20px;
     z-index: 3;
 }
 
-img {
+.image-data {
     position: absolute;
+    top: 0;
     left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 100%;
-    min-height: 100%;
+    height: 100vh;
+    transform: translateX(-50%);
     object-fit: cover;
-    z-index: 1;
+    width: auto;
+    max-width: none;
 }
 
 .buttons{
@@ -29,10 +31,8 @@ img {
     bottom: 30px;
     font-size: 20px;
     font-weight: 500;
-    border-top: 1px solid #6464641A;
-    border-radius: 10px;
     width: 100%;
-    padding: 0 20px;
+    padding: 0 20px;    
     z-index: 3;
     display: flex;
     justify-content: space-between;
@@ -48,4 +48,14 @@ button{
     color: white;
     border: none;
     border-radius: 25px;
+}
+
+.error{
+    color: #f44336;
+    z-index: 3;
+}
+
+.status{
+    position: relative;
+    z-index: 3;
 }
