--- a/src/app/pages/gallery/gallery.component.scss
+++ b/src/app/pages/gallery/gallery.component.scss
@@ -1,12 +1,9 @@
 video{
     position: absolute;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
-    min-width: 100%;
-    min-height: 100%;
-    object-fit: cover;
-    z-index: 1;
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    transform: scale(1.05);
 }
 
 canvas{
@@ -18,6 +15,7 @@ canvas{
     width: 100vw;
     height: 100vh;
     overflow: hidden;
+    display: flex;
 }
 
 .back-button{
@@ -33,8 +31,6 @@ canvas{
     bottom: 30px;
     font-size: 20px;
     font-weight: 500;
-    border-top: 1px solid #6464641A;
-    border-radius: 10px;
     width: 100%;
     padding: 0 20px;
     z-index: 3;
