--- a/src/app/components/downloader-buttons/downloader-buttons.component.scss
+++ b/src/app/components/downloader-buttons/downloader-buttons.component.scss
@@ -2,26 +2,38 @@
     box-sizing: border-box;
     position: fixed;
     bottom: 65px;
-    font-size: 20px;
     font-weight: 500;
     border-top: 1px solid #6464641A;
     border-radius: 10px;
     width: 100%;
     padding: 0 20px;
     background: #FCFCFC;
-}
-.buttons{
-    height: 135px;
-}
+    transition: transform 0.5s ease;
 
-button{
-    padding: 16px 20px;
-    display: inline-block;
-    width: 100%;
-    height: 50px;
-    background-color: #B200FF;
-    color: white;
-    border: none;
-    border-radius: 25px;
-    margin-top: 10px;
+    &.hide-down {
+    transform: translateY(125px);
+    }
+
+    .icons{
+        margin-top: 8px;
+        display: flex;
+        justify-content: space-between;
+    }
+    .buttons{
+        height: 135px;
+
+        button{
+            padding: 0 20px;
+            display: inline-block;
+            width: 100%;
+            height: 50px;
+            background-color: #B200FF;
+            color: white;
+            border: none;
+            border-radius: 25px;
+            margin-bottom: 10px;
+            margin-top: 2px;
+            font-size: 20px;
+        }
+    }
 }
