--- a/src/app/pages/gallery/gallery.component.scss
+++ b/src/app/pages/gallery/gallery.component.scss
@@ -1,9 +1,12 @@
-video{
+video {
     position: absolute;
-    width: 100%;
-    height: 100%;
-    object-fit: contain;
-    transform: scale(1.05);
+    top: 0;
+    left: 50%;
+    height: 100vh;
+    transform: translateX(-50%);
+    object-fit: cover;
+    width: auto;
+    max-width: none;
 }
 
 canvas{
@@ -29,7 +32,6 @@ canvas{
     box-sizing: border-box;
     position: fixed;
     bottom: 30px;
-    font-size: 20px;
     font-weight: 500;
     width: 100%;
     padding: 0 20px;
@@ -40,7 +42,7 @@ canvas{
 
 button{
     position: relative;
-    padding: 16px 15px;
+    padding: 0 15px;
     display: inline-block;
     width: 45%;
     height: 50px;
@@ -48,4 +50,5 @@ button{
     color: white;
     border: none;
     border-radius: 25px;
+    font-size: 20px;
 }
