--- a/src/app/components/downloader-buttons/downloader-buttons.component.scss
+++ b/src/app/components/downloader-buttons/downloader-buttons.component.scss
@@ -9,20 +9,51 @@
     padding: 0 20px;
     background: #FCFCFC;
     transition: transform 0.5s ease;
+    min-height: 165px;
 
     &.hide-down {
     transform: translateY(125px);
+    }
+
+    &.hide-change{
+    transform: translateY(200px);
     }
 
     .icons{
         margin-top: 8px;
         display: flex;
         justify-content: space-between;
+
+        .icon-open-closed{
+            padding-left: 2px;
+        }
     }
+
+    .things{
+        margin-top: -7px;
+        width: 70%;
+        .thing{
+            width: 50%;
+            height: 30px;
+            border: none;
+            background-color: white;
+            font-size: 12px;
+            padding-bottom: 8px;
+            transition: all 0.3s ease;
+            border-radius: 0 0 10px 10px;
+
+            &.thing-active{
+                border-radius: 0 0 10px 10px;
+                background-color: #B200FF;
+                color: white;
+            }
+        }
+    }
+
     .buttons{
         height: 135px;
 
-        button{
+        .button{
             padding: 0 20px;
             display: inline-block;
             width: 100%;
@@ -33,7 +64,7 @@
             border-radius: 25px;
             margin-bottom: 10px;
             margin-top: 2px;
-            font-size: 20px;
+            font-size: 18px;
         }
     }
 }
