--- a/src/app/components/bottom-header/bottom-header.component.scss
+++ b/src/app/components/bottom-header/bottom-header.component.scss
@@ -4,30 +4,36 @@
     margin: 0 auto;
     padding: 0 20px;
     box-sizing: border-box;
-}
 
-.header__nav{
-    position: fixed;
-    bottom: 0;
-    left: 0;
-    width: 100%;
-    padding: 15px 10px;
-    box-sizing: border-box;
-    background: #FCFCFC;
-}
+    
+    .header__nav{
+        position: fixed;
+        bottom: 0;
+        left: 0;
+        width: 100%;
+        padding: 15px 10px;
+        box-sizing: border-box;
+        background: #FCFCFC;
+        z-index: 5;
 
-.nav__list{
-    display: flex;
-    justify-content: space-around;
-}
+        .nav__list{
+            display: flex;
+            justify-content: space-around;
 
-.nav__item{
-    width: 70px;
-    text-align: center;
-}
+            .nav__item{
+                width: 70px;
+                text-align: center;
 
-.nav__link img {
-    height: 24px;
-    width: auto;
-    margin-bottom: 5px;
+                .nav__link img {
+                    height: 24px;
+                    width: auto;
+                    margin-bottom: 5px;
+                }
+
+                .nav__link.active p {
+                    color: #9747FF
+                }
+            }
+        }
+    }
 }
