--- a/src/app/pages/confirmation/confirmation.component.scss
+++ b/src/app/pages/confirmation/confirmation.component.scss
@@ -37,7 +37,7 @@
     justify-content: space-between;
 }
 
-button{
+.button{
     position: relative;
     padding: 0 15px;
     display: inline-block;
