--- a/src/app/pages/add-clothes/add-clothes.component.scss
+++ b/src/app/pages/add-clothes/add-clothes.component.scss
@@ -9,11 +9,11 @@
 .buttons{
     box-sizing: border-box;
     position: fixed;
-    bottom: 80px;
+    bottom: 90px;
     left: 0;
     padding: 0 20px;
     width: 100%;
-    z-index: 3;
+    z-index: 1;
     display: flex;
     justify-content: space-between;
 }
@@ -69,7 +69,7 @@
     padding: 0 20px;
     box-sizing: border-box;
     position: relative;
-    z-index: 2;
+    z-index: 3;
   }
   
 .clothes-category-button {
@@ -93,25 +93,26 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     margin-top: -7px;
     opacity: 0;
-    margin-bottom: 300px;
+    margin-bottom: 200px;
   
     &--open {
-      max-height: 500px;
+      max-height: 100%;
       opacity: 1;
       background-color: white;
       z-index: 3;
       position: relative;
     }
-  }
   
   .dropdown-item {
 
     .category-name {
       display: flex;
+      justify-content: space-between;
       width: 100%;
       border: 1px solid black;
       padding-left: 20px;
       padding-bottom: 15px;
+      padding-right: 20px;
       font-size: 16px;
       box-sizing: border-box;
       align-items: flex-end;
@@ -128,32 +129,57 @@
     list-style: none;
     max-height: 0;
     overflow: hidden;
-    transition: max-height 0.3s ease;
   
     &.submenu--open {
-      max-height: 200px;
+      max-height: 100%;
     }
-  }
-  
-  .submenu-item {
-    display: flex;
-    padding: 0 40px;
-    border: 1px solid black;
-    padding-bottom: 15px;
-    font-size: 16px;
-    height: 50px;
-    box-sizing: border-box;
-    align-items: flex-end;
-    border-top: 0;
-  
-    a {
-      text-decoration: none;
-  
-      &:hover {
-        text-decoration: underline;
+
+    .submenu-item {
+
+      .subcategory-name{
+        width: 100%;
+        display: flex;
+        justify-content: space-between;
+        padding: 0 40px;
+        border: 1px solid black;
+        padding-bottom: 15px;
+        font-size: 16px;
+        height: 50px;
+        box-sizing: border-box;
+        align-items: flex-end;
+        border-top: 0;
+      }
+
+      .subcategory-name--open{
+        font-weight: 600;
+      }
+
+      .subsubmenu{
+        list-style: none;
+        max-height: 0;
+        overflow: hidden;
+      
+        &.subsubmenu--open {
+          max-height: 100%;
+        }
+
+        .subsubcategory-name{
+          width: 100%;
+          display: flex;
+          justify-content: space-between;
+          padding-left: 60px;
+          border: 1px solid black;
+          padding-bottom: 15px;
+          font-size: 16px;
+          height: 50px;
+          box-sizing: border-box;
+          align-items: flex-end;
+          border-top: 0;
+        }
       }
     }
   }
+}
 
 .image__container{
   background-color: #BCBCBC;
@@ -171,4 +197,14 @@
     max-height: 100%;
     
   }
+}
+
+.bottom-header{
+  position: fixed;
+  bottom: 62px;
+  border-top: 1px solid #6464641A;
+  border-radius: 10px;
+  width: 100%;
+  height: 10px;
+  z-index: 6;
 }
