--- a/src/app/pages/gallery/gallery.component.scss
+++ b/src/app/pages/gallery/gallery.component.scss
@@ -28,27 +28,40 @@ canvas{
     z-index: 3;
 }
 
-.buttons{
-    box-sizing: border-box;
+.togglePhoto{
+    z-index: 4;
+    width: 80px;
+    height: 80px;
+    border: 3px solid white;
+    border-radius: 40px;
+    background-color: transparent;
+    backdrop-filter: blur(9px);
+
     position: fixed;
-    bottom: 30px;
-    font-weight: 500;
-    width: 100%;
-    padding: 0 20px;
-    z-index: 3;
-    display: flex;
-    justify-content: space-between;
+    bottom: 50px;
+    left: 50%;
+    
+    transform: translateX(-50%);
+    transition: transform 0.2s ease, scale 0.1s ease;
+    transform-origin: center;
 }
 
-button{
-    position: relative;
-    padding: 0 15px;
-    display: inline-block;
-    width: 45%;
-    height: 50px;
-    background-color: #B200FF;
-    color: white;
+.togglePhoto:active {
+    transform: translateX(-50%) scale(0.95); 
+    outline: none;
+}
+
+.folderPhoto{
+    z-index: 4;
+    height: 62px;
+    background-color: transparent;
     border: none;
-    border-radius: 25px;
-    font-size: 20px;
+
+    position: fixed;
+    bottom: 50px;
+    left: 75%;
+}
+
+.video__text{
+    color: white;
 }
