--- a/src/app/pages/main/main.component.html
+++ b/src/app/pages/main/main.component.html
@@ -1,4 +1,9 @@
-<div class="main__container" *ngIf="imageData">
-	<img class="image-data" [src]="imageData" alt="Captured Photo" />
+<div class="main__container">
+	<img
+		*ngIf="imageData"
+		class="image-data"
+		[src]="imageData"
+		alt="Captured Photo"
+	/>
 </div>
 <app-downloader-buttons></app-downloader-buttons>
