--- a/src/app/components/downloader-buttons/downloader-buttons.component.scss
+++ b/src/app/components/downloader-buttons/downloader-buttons.component.scss
@@ -10,21 +10,22 @@
     background: #FCFCFC;
     transition: transform 0.5s ease;
     min-height: 165px;
+    
 
     &.hide-down {
     transform: translateY(125px);
     }
 
-    &.hide-change{
-    transform: translateY(200px);
-    }
-
     .icons{
         margin-top: 8px;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
+        position: relative;
+        width: 100%;
 
         .icon-open-closed{
+            position: absolute;
+            right: 0;
             padding-left: 2px;
         }
     }
@@ -47,24 +48,6 @@
                 background-color: #B200FF;
                 color: white;
             }
-        }
-    }
-
-    .buttons{
-        height: 135px;
-
-        .button{
-            padding: 0 20px;
-            display: inline-block;
-            width: 100%;
-            height: 50px;
-            background-color: #B200FF;
-            color: white;
-            border: none;
-            border-radius: 25px;
-            margin-bottom: 10px;
-            margin-top: 2px;
-            font-size: 18px;
         }
     }
 }
