--- a/src/app/pages/add-clothes/add-clothes.component.scss
+++ b/src/app/pages/add-clothes/add-clothes.component.scss
@@ -73,37 +73,47 @@
   }
   
 .clothes-category-button {
-    width: 100%;
-    height: 50px;
-    text-align: left;
-    padding: 0 20px;
+  width: 100%;
+  height: 50px;
+  text-align: left;
+  padding: 0 20px;
+  background-color: white;
+  border: 1px solid black;
+  border-radius: 10px;
+  transition: background-color 0.3s ease;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 16px;
+  z-index: 10;
+  position: relative;
+}
+  
+.dropdown-menu {
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: -7px;
+  opacity: 0;
+  margin-bottom: 200px;
+
+  &--open {
+    max-height: 100%;
+    opacity: 1;
     background-color: white;
-    border: 1px solid black;
-    border-radius: 10px;
-    transition: background-color 0.3s ease;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 16px;
-    z-index: 10;
+    z-index: 3;
     position: relative;
   }
   
-  .dropdown-menu {
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    margin-top: -7px;
-    opacity: 0;
-    margin-bottom: 200px;
-  
-    &--open {
-      max-height: 100%;
-      opacity: 1;
-      background-color: white;
-      z-index: 3;
-      position: relative;
-    }
-  
   .dropdown-item {
+
+    &:last-child .submenu-item:last-child .subcategory-name {
+      border-radius: 0 0 10px 10px;
+      overflow: hidden;
+    }
+
+    &:last-child .submenu-item:last-child .subsubmenu-item:last-child .subsubcategory-name {
+      border-radius: 0 0 10px 10px;
+      overflow: hidden;
+    }
 
     .category-name {
       display: flex;
@@ -118,10 +128,16 @@
       align-items: flex-end;
       height: 50px;
       border-top: 0;
-
-      &.category-name--open{
+    
+      &.category-name--open {
         font-weight: 600;
+        border-radius: 0 !important;
       }
+    }
+
+    &:last-child .category-name {
+      border-radius: 0 0 10px 10px;
+      overflow: hidden;
     }
   }
   
@@ -134,13 +150,52 @@
       max-height: 100%;
     }
 
-    .submenu-item {
+    position: relative;
+    &::before{
+      content: '';
+      position: absolute;
+      left: 20px;
+      height: calc(100% - 10px);
+      width: 3px;
+      top: 50%;
+      transform: translateY(-50%);
+      background-color: #BCBCBC;
+      border-radius: 2px;
+    }
 
-      .subcategory-name{
+    .subcategory-name{
+      width: 100%;
+      display: flex;
+      justify-content: space-between;
+      padding: 0 40px;
+      border: 1px solid black;
+      padding-bottom: 15px;
+      font-size: 16px;
+      height: 50px;
+      box-sizing: border-box;
+      align-items: flex-end;
+      border-top: 0;
+    }
+
+    .subcategory-name--open{
+      font-weight: 600;
+      border-radius: 0 !important;
+    }
+
+    .subsubmenu{
+      list-style: none;
+      max-height: 0;
+      overflow: hidden;
+    
+      &.subsubmenu--open {
+        max-height: 100%;
+      }
+
+      .subsubcategory-name{
         width: 100%;
         display: flex;
         justify-content: space-between;
-        padding: 0 40px;
+        padding-left: 60px;
         border: 1px solid black;
         padding-bottom: 15px;
         font-size: 16px;
@@ -150,36 +205,22 @@
         border-top: 0;
       }
 
-      .subcategory-name--open{
-        font-weight: 600;
-      }
-
-      .subsubmenu{
-        list-style: none;
-        max-height: 0;
-        overflow: hidden;
-      
-        &.subsubmenu--open {
-          max-height: 100%;
-        }
-
-        .subsubcategory-name{
-          width: 100%;
-          display: flex;
-          justify-content: space-between;
-          padding-left: 60px;
-          border: 1px solid black;
-          padding-bottom: 15px;
-          font-size: 16px;
-          height: 50px;
-          box-sizing: border-box;
-          align-items: flex-end;
-          border-top: 0;
-        }
+      position: relative;
+      &::before{
+        content: '';
+        position: absolute;
+        left: 40px;
+        height: 90%;
+        width: 3px;
+        top: 50%;
+        transform: translateY(-50%);
+        background-color: #BCBCBC;
+        border-radius: 2px;
       }
     }
   }
 }
+
 
 .image__container{
   background-color: #BCBCBC;
