--- a/src/app/pages/main/main.component.scss
+++ b/src/app/pages/main/main.component.scss
@@ -1,4 +1,20 @@
+.add-body{
+    position: fixed;
+    width: 40px;
+    height: 40px;
+    background-color: white;
+    border: 0;
+    border-radius: 10px;
+    z-index: 3;
+    padding: 0;
+    padding-top: 4px;
+    top: 15px;
+    left: 20px;
 
+}
+.add-body.active{
+    background-color: #b200ff;
+}
 .main__container{
     position: relative;
     width: 100%;
@@ -10,6 +26,73 @@
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
+
+    &__blur{
+        height: 140px;
+        background-color: transparent;
+        backdrop-filter: blur(20px);
+        z-index: 2;
+        padding-top: 15px;
+
+        .category-body-list{
+            display: flex;
+            overflow-x: auto;
+            padding-bottom: 10px;
+            width: 100%;
+
+            &::-webkit-scrollbar {
+                height: 4px;
+            }
+
+            &::-webkit-scrollbar-thumb {
+                background: #b200ff;
+                border-radius: 2px;
+            }
+
+            .scroll-container {
+                display: flex;
+                flex-wrap: nowrap;
+                gap: 5px;
+                padding: 0 15px;
+                min-width: max-content;
+
+                .category-body__item{
+                    display: flex;
+                    gap: 5px;
+                }
+            }
+
+            .category-body-item{
+                flex: 0 0 auto;
+                width: 85px;
+                height: 110px;
+                border-radius: 10px;
+                box-shadow: 0 4px 10px 0 rgba(0, 0, 0, 0.1);
+                position: relative;
+                background-color: white;
+
+                .category-body__image{
+                    width: 100%;
+                    height: 100%;
+                    object-fit: cover;
+                    border-radius: 10px;
+                }
+            }
+
+            .add-body-item{
+                background-color: #b200ff;
+                display: flex;
+                justify-content: center;
+                margin-left: 70px;
+
+                img{
+                    width: 42px;
+                    height: 42px;
+                    padding-top: 32px;
+                }
+            }
+        }
+    }
 }
 
 .image-data {
