--- a/src/app/pages/wardrobe/wardrobe.component.scss
+++ b/src/app/pages/wardrobe/wardrobe.component.scss
@@ -4,9 +4,21 @@
     margin: 0 auto;
     padding: 0 20px;
     box-sizing: border-box;
+    margin-bottom: 180px;
+    background-color: white;
 
     .header__wardrobe{
+        display: flex;
         margin-top: 20px;
+        margin-bottom: 15px;
+        align-items: center;
+        justify-content: center;
+        position: relative;
+
+        a{
+            position: absolute;
+            left: 0;
+        }
 
         h1 {
             font-size: 16px;
@@ -15,19 +27,6 @@
             padding: 0;
             margin-block: 0;
         }
-    }
-
-    .wardrobe-search-button{
-        width: 100%;
-        height: 37px;
-        display: flex;
-        align-items: center;
-        justify-content: space-between;
-        background-color: white;
-        border: 1px solid black;
-        border-radius: 12px;
-        margin: 15px 0;
-        padding: 0 20px;
     }
 
     .wardrobe-list{
@@ -58,11 +57,15 @@
                     width: auto;
                     position: absolute;
                     right: 0;
-                    bottom: 0;
+                    bottom: -10px;
                     border-radius: 12px;
                     position: absolute;
                     object-fit: cover;
                 }
+            }
+
+            .subwardrobe-item{
+                margin: 10px 0;
             }
         }
     }
@@ -98,5 +101,6 @@
         border-radius: 10px;
         width: 100%;
         height: 100px;
+        background-color: #fcfcfc;
     }
 }
